--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,4 +16,10 @@ services:
       - /opt/jenkins-training/jenkins_compose/jenkins_configuration:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
       - /usr/bin/docker:/usr/bin/docker
+    networks:
+      - my-net
+
+networks:
+  my-net:
+    driver: bridge
 
