--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-# /home/cpa/Documents/CPA/44_JENKINS/DM.JENKINS/DM-SP04-C04-JENKINS-CPA-MAY2024/Jenkins_devops_exams/docker-compose.yml
+# /home/cpa/Documents/CPA/44_JENKINS/DM.JENKINS/DM-SP04-C04-JENKINS-CPA-MAY2024/dm-ds-cdo-may24-jenkins/docker-compose.yml
 version: '3'
 name: <dm-jenkins-cpa-infra>
 
@@ -12,12 +12,16 @@ services:
       - 50000:50000
     container_name: jenkins
     restart: always
+
     volumes:
+#      - ./init-k3d.sh:/app/init-k3d.sh
       - /opt/jenkins-training/jenkins_compose/jenkins_configuration:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
       - /usr/bin/docker:/usr/bin/docker
     networks:
       - my-net
+
+    #command: ["/bin/bash", "-c", "./init-k3d.sh"]
 
 networks:
   my-net:
