--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,11 +12,11 @@ services:
       - 50000:50000
     container_name: jenkins
     restart: always
-    environment:
-      - KUBECONFIG="/datas/data-k3d/k3s.yaml"
+    # environment:
+     # - KUBECONFIG="/datas/data-k3d/k3s.yaml"
 
     volumes:
-      - /home/cpa/Documents/CPA/44_JENKINS/DM.JENKINS/DM-SP04-C04-JENKINS-CPA-MAY2024/dm-ds-cdo-may24-jenkins2/datas/data-k3d:/datas/data-k3d
+     # - /home/cpa/Documents/CPA/44_JENKINS/DM.JENKINS/DM-SP04-C04-JENKINS-CPA-MAY2024/dm-ds-cdo-may24-jenkins2/datas/data-k3d:/datas/data-k3d
       - /opt/jenkins-training/jenkins_compose/jenkins_configuration:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
       - /var/run/kubectl.sock:/var/run/kubectl.sock
