--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,3 @@
-asyncpg==0.20.1
-databases[postgresql]==0.2.6
-fastapi==0.48.0
-SQLAlchemy==1.3.13
-uvicorn==0.11.2
-httpx==0.11.1
+uvicorn[standard]==0.20.0
+gunicorn==20.1.0
+fastapi[all]==0.88.0
