--- a/app/values.yaml
+++ b/app/values.yaml
@@ -5,16 +5,12 @@
 replicaCount: 3
 
 image:
-  repository: sajjadhz/fastapiapp
-#  repository: cpa8876/fastapiapp
+#  repository: sajjadhz/fastapiapp
+  repository: cpa8876/ds-fastapi
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
 
-imagePullSecrets: 
-  - name: "regcred"
-nameOverride: ""
-fullnameOverride: ""
 
 serviceAccount:
   # Specifies whether a service account should be created
