--- a/dr01-python-microservices6/docker-compose.yml
+++ b/dr01-python-microservices6/docker-compose.yml
@@ -67,11 +67,19 @@ services:
     ports:
       - "8080:8080"
     volumes:
-      - ./nginx_config.conf:/etc/nginx/conf.d/default.conf
+     - ./nginx_config.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - cast_service
       - movie_service
+# https://stackoverflow.com/questions/50705838/docker-compose-with-nginx-keeps-displaying-welcome-page
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
 
 volumes:
   postgres_data_movie:
   postgres_data_cast:
+
