--- a/dr01-python-microservices6/docker-compose.yml
+++ b/dr01-python-microservices6/docker-compose.yml
@@ -16,6 +16,8 @@ services:
       retries: 5
       start_period: 30s
       timeout: 10s
+    networks:
+      - app-network
 
   movie_service:
     build: ./movie-service
@@ -32,6 +34,8 @@ services:
     environment:
       - DATABASE_URL=postgresql://movie_db_username:movie_db_password@movie_db/movie_db_dev
       - CAST_SERVICE_HOST_URL=http://cast_service:8000/api/v1/casts/
+    networks:
+      - app-network
 
   cast_db:
     image: postgres:12.1-alpine
@@ -47,6 +51,8 @@ services:
       retries: 5
       start_period: 30s
       timeout: 10s
+    networks:
+      - app-network
 
   cast_service:
     build: ./cast-service
@@ -61,11 +67,13 @@ services:
       - 8002:8000
     environment:
       - DATABASE_URI=postgresql://cast_db_username:cast_db_password@cast_db/cast_db_dev
+    networks:
+      - app-network
 
   nginx:
     image: nginx:latest
     ports:
-      - "8080:8080"
+      - 8080:8080
     volumes:
      - ./nginx_config.conf:/etc/nginx/conf.d/default.conf
     depends_on:
