--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
     volumes:
      # - /home/cpa/Documents/CPA/44_JENKINS/DM.JENKINS/dm-ds-cdo-may24-jenkins5/datas/data-k3d:/datas/data-k3d
       - ./init-k3d.sh:/app/init-k3d.sh
+      -
       - /home/cpa/Documents/CPA/44_JENKINS/DM.JENKINS/dm-ds-cdo-may24-jenkins5/datas/data-k3d/k3s_v2.yaml:/usr/local/k3s.yaml
       - /home/cpa/Documents/CPA/44_JENKINS/DM.JENKINS/dm-ds-cdo-may24-jenkins5/dr01-python-microservices6:/app
       - /home/cpa/Documents/CPA/44_JENKINS/DM.JENKINS/dm-ds-cdo-may24-jenkins5/fastapi:/fastapi
@@ -31,6 +32,7 @@ services:
       - /usr/bin/docker-compose:/usr/bin/docker-compose
       - /usr/local/bin/kubectl:/usr/local/bin/kubectl
       - /usr/local/bin/helm:/usr/local/bin/helm
+      - /usr/bin/runc:/usr/bin/runc
 
 # https://forums.docker.com/t/docker-compose-cant-connect-to-existing-network/94370/13
     networks:
