update k8s manifest yaml to deploy cast fastapi with secret

--- a/dr01-python-microservices6/k8s-test4/cast-db-secret.yaml
+++ b/dr01-python-microservices6/k8s-test4/cast-db-secret.yaml
@@ -5,7 +5,8 @@ metadata:
   name: cast-db-secret
   labels:
     app: fastapi-casts
+  namespace: dev
 data: # echo -n "postgres:..." | base64
   postgres_db: Y2FzdF9kYl9jcGE=
-  pstgress_password: Y2FzdF9kYl9jcGFfcGFzc3dvcmQ=
+  postgres_password: Y2FzdF9kYl9jcGFfcGFzc3dvcmQ=
   postgres_user: Y2FzdF9kYl9jcGFfdXNlcm5hbWU=
