--- a/dr01-python-microservices6/k8s-test4/cast-service-service.yaml
+++ b/dr01-python-microservices6/k8s-test4/cast-service-service.yaml
@@ -5,6 +5,7 @@ metadata:
   name: cast-service
   labels:
     app: fastapi-casts
+  namespace: dev
 spec:
 #  type: LoadBalancer
   type: NodePort # For INGRESS ClusterIP can be used as well instead of NodePort
