--- a/dr01-python-microservices6/k8s-test4/nginx-claim0-pvc.yaml
+++ b/dr01-python-microservices6/k8s-test4/nginx-claim0-pvc.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     io.kompose.service: nginx-config-pvc
   name: nginx-config-pvc
+  namespace: dev
 spec:
   accessModes:
   - ReadWriteOnce
