--- a/dr01-python-microservices6/k8s-test4/cast-service-claim0-pvc.yaml
+++ b/dr01-python-microservices6/k8s-test4/cast-service-claim0-pvc.yaml
@@ -2,13 +2,14 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
+  name: cast-service-claim0
   creationTimestamp: null
   labels:
     app: fastapi-casts
+  namespace: dev
 spec:
   accessModes:
   - ReadWriteOnce
   resources:
     requests:
       storage: 1Gi
-status: {}
