update k8s manifest for cast fastapi.yaml

--- a/dr01-python-microservices6/k8s-test4/cast-db-sts.yaml
+++ b/dr01-python-microservices6/k8s-test4/cast-db-sts.yaml
@@ -37,7 +37,10 @@ spec:
         livenessProbe:
           exec:
             command:
-            - 'pg_isready -U  -d '
+#            - 'pg_isready -U $POSTGRES_USER -d $POSTGRES_DB'
+             - /bin/sh
+             - -c
+             - exec pg_isready -U "$POSTGRES_USER" -d "$POSTGRE_DB_NAME"
           failureThreshold: 5
           periodSeconds: 10
           timeoutSeconds: 10
