--- a/dr01-python-microservices6/k8s-test4/nginx-claim0-pvc.yaml
+++ b/dr01-python-microservices6/k8s-test4/nginx-claim0-pvc.yaml
@@ -1,10 +1,9 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  creationTimestamp: null
-  labels:
-    io.kompose.service: nginx-config-pvc
   name: nginx-config-pvc
+  labels:
+    app: fastapi-casts
   namespace: dev
 spec:
   accessModes:
