--- a/dr01-python-microservices6/k8s-test4/fastapi-dm-jenkins-pv.yaml
+++ b/dr01-python-microservices6/k8s-test4/fastapi-dm-jenkins-pv.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: nginx-config-pv
+  name: fastapi-dm-jenkins-pv
   labels:
     app: fastapi-casts
   namespace: dev
