--- a/dr01-python-microservices6/k8s-test4/nginx-service.yaml
+++ b/dr01-python-microservices6/k8s-test4/nginx-service.yaml
@@ -1,19 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  annotations:
-    kompose.cmd: kompose convert
-    kompose.version: 1.16.0 (0c01309)
-  creationTimestamp: null
+  name: nginx-service
   labels:
-    io.kompose.service: nginx
-  name: nginx
+    app: nginx
+  namespace: dev
 spec:
+  type: LoadBalancer
+  selector:
+    app: nginx-service
   ports:
   - name: "8085"
     port: 8085
     targetPort: 8081
-  selector:
-    io.kompose.service: nginx
-status:
-  loadBalancer: {}
+
