--- a/dr01-python-microservices6/k8s-test4/postgres-data-cast-pvc.yaml
+++ b/dr01-python-microservices6/k8s-test4/postgres-data-cast-pvc.yaml
@@ -1,14 +1,15 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
+  name: postgres-data-cast
   creationTimestamp: null
   labels:
-    io.kompose.service: postgres-data-cast
-  name: postgres-data-cast
+    app: fastapi-casts
+  namespace: dev
+
 spec:
   accessModes:
   - ReadWriteOnce
   resources:
     requests:
-      storage: 100Mi
-status: {}
+      storage: 1Gi
