--- a/dr01-python-microservices6/k8s-test4/cast-service-deployment.yaml
+++ b/dr01-python-microservices6/k8s-test4/cast-service-deployment.yaml
@@ -39,10 +39,17 @@ spec:
                 name: cast-db-secret
                 key: postgres_user
           - name: CAST_DB
-            value: 10.42.1.40
+            value: postgresql://$POSTGRES_USER:$POSTGRES_PASSWORD@cast_db/POSTGRES_DB
           - name: DATABASE_URI
-            #value: postgresql://$POSTGRES_USER:$POSTGRES_PASSWORD@$CAST_DB/$POSTGRES_DB
-            value: postgresql://cast_db_cpa_username:cast_db_cpa_password@10.42.1.40/cast_db_cpa
+            value: postgresql://$POSTGRES_USER:$POSTGRES_PASSWORD@cast_db/POSTGRES_DB
         ports:
           - containerPort: 8005
+        resources: {}
         command: ["uvicorn", "app.main:app", "--reload", "--host", "0.0.0.0", "--port", "8005"]
+        volumeMounts:
+          - mountPath: /data/
+            name: cast-service-claim0
+      volumes:
+        - name: cast-service-claim0
+          persistentVolumeClaim:
+            claimName: cast-service-claim0
