--- a/dr01-python-microservices6/k8s-test6/fastapi-movie-postgres/app/cast-service-deployment.yaml
+++ b/dr01-python-microservices6/k8s-test6/fastapi-movie-postgres/app/cast-service-deployment.yaml
@@ -38,21 +38,18 @@ spec:
               secretKeyRef:
                 name: cast-db-secret
                 key: postgres_user
-          - name: CAST_DB
+          - name: IP_CAST_DB
             value: 10.42.1.40
           - name: DATABASE_URI
-            #value: postgresql://$POSTGRES_USER:$POSTGRES_PASSWORD@$CAST_DB/$POSTGRES_DB
-            value: postgresql://cast_db_cpa_username:cast_db_cpa_password@10.42.1.40/cast_db_cpa
+            value: "postgresql://$(POSTGRES_USER):$(POSTGRES_PASSWORD)@$(IP_CAST_DB)/$(POSTGRES_DB)"
+            #value: postgresql://cast_db_cpa_username:cast_db_cpa_password@10.42.1.40/cast_db_cpa
         ports:
           - containerPort: 8005
-        command: ["/bin/sh", "-c"]
-        args: ["uvicorn", "app.main:app", "--reload", "--host", "0.0.0.0", "---port", "8005"]
-        args: ["echo", "$DATABASE_URI" ]
+        command: ["uvicorn", "app.main:app", "--reload", "--host", "0.0.0.0", "--port", "8005"]
         volumeMounts:
-          - mountPath: /data/
-            name: cast-service-claim0
-      restartPolicy: Always
+            - name: cast-service-config-pvc
+              mountPath: datas/fastapi-cast-config
       volumes:
-        - name: cast-service-claim0
+        - name: cast-service-config-pvc
           persistentVolumeClaim:
             claimName: cast-service-claim0
