--- a/dr01-python-microservices6/k8s/cast/fastapi-cast-deployment.yml
+++ b/dr01-python-microservices6/k8s/cast/fastapi-cast-deployment.yml
@@ -54,17 +54,13 @@ spec:
     spec:
       containers:
         - name: fastapi-cast-ctnr
-#          image: lahcenedergham/fastapi-image:latest
-           image: cpa8876/casts-ds-fastapi
-           command: ["uvicorn", "app.main:app", "--reload", "--host 0.0.0.0", "--port 5000"]
-          env:
-          - name: DATABASE_URL
-#             value: "postgresql://fastapi_user:fastapi_passwd@10.43.162.83:5432/fastapi_db" 
-#            value: "postgresql://fastapi_user:fastapi_passwd@cast-db-service:5432/fastapi_db" 
-            valueFrom:
-              secretKeyRef:
-                name: fastapi-cast-secret
-                key: URL
+          image: cpa8876/casts-ds-fastapi # image: lahcenedergham/fastapi-image:latest
+          env:          # value: "postgresql://fastapi_user:fastapi_passwd@10.43.162.83:5432/fastapi_db" ,  value: "postgresql://fastapi_user:fastapi_passwd@cast-db-service:5432/fastapi_db"
+            - name: DATABASE_URI
+              valueFrom:
+                secretKeyRef:
+                  name: fastapi-cast-secret
+                  key: URL
           ports:
             - containerPort: 5000
 ---
