--- a/charts/cast-db/environments/dev/values.charts.cast.db.dev.yaml
+++ b/charts/cast-db/environments/dev/values.charts.cast.db.dev.yaml
@@ -1,6 +1,14 @@
 # /home/cpa/Documents/CPA/44_JENKINS/DM.JENKINS/DM-SP04-C04-JENKINS-CPA-MAY2024/dm-ds-cdo-may24-jenkins/charts/cast-db/environments/dev/values.dev.yaml
 # https://search.brave.com/search?q=deploy+postgresql++with+helm+define+database+name+user+and+password&summary=1&conversation=dc22ae482ce1d03139eac3
-auth:
+replicaCount: 1
+
+# This sets the container image more information can be found here: https://kubernetes.io/docs/concepts/containers/images/
+image:
+  repository: bitnami/postgresql
+  # This sets the pull policy for images.
+  pullPolicy: IfNotPresent
+  # Overrides the image tag whose default is the chart appVersion.
+  tag: ""
   username: fastapi_user      # echo $(echo -n "ZmFzdGFwaV91c2Vy" | base64 -d)  :=> fastapi_user
 #  password: fastapi_passwd  # echo $(echo -n "ZmFzdGFwaV9wYXNzd2Q=" | base64 -d)  :=> fastapi_passwd
   database: fastapi_db      # echo $(echo -n "ZmFzdGFwaV9kYg==" | base64 -d)  :=> fastapi_db
