--- a/dm-jenkins-cpa/cast-service/helm/cast-db/templates/deployment.yaml
+++ b/dm-jenkins-cpa/cast-service/helm/cast-db/templates/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: cast-db
-          image: "{{ .Values.image.cast-db }}"
+          image: "{{ .Values.image.cast_db }}"
           ports:
             - containerPort: 5432
               name: cast-db
@@ -24,15 +24,15 @@ spec:
             - name: POSTGRES_USER
               valueFrom:
                 secretKeyRef:
-                  name: "{{ .Values.cast-db-secret}}"
-                  key: "{{ .Values.cast-db-secret.cast-db-username }}"
+                  name: "{{ .Values.cast_db_secret}}"
+                  key: "{{ .Values.cast_db_secret.cast_db_username }}"
             - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: "{{ .Values.cast-db-secret}}"
-                  key: "{{ .Values.cast-db-secret.cast-db-password }}"
+                  name: "{{ .Values.cast_db_secret}}"
+                  key: "{{ .Values.cast_db_secret.cast_db_password }}"
             - name: POSTGRES_DB
               valueFrom:
                 secretKeyRef:
-                  name: "{{ .Values.cast-db-secret}}"
-                  key: "{{ .Values.cast-db-secret.cast-db-database }}"
+                  name: "{{ .Values.cast_db_secret}}"
+                  key: "{{ .Values.cast_db_secret.cast_db_database }}"
