--- a/dm-jenkins-cpa/cast-service/helm/cast-db/templates/secrets.yaml
+++ b/dm-jenkins-cpa/cast-service/helm/cast-db/templates/secrets.yaml
@@ -13,6 +13,9 @@ metadata:
 type: Opaque
 data:
 #  password: {{ .Values.password | b64enc | quote }}
-  cast-db-username: {{ .Values.cast_db_username | b64enc | quote }}
-  cast-db-password: {{ .Values.cast_db_password| b64enc | quote }}
-  cast-db-database: {{ .Values.cast_db_database | b64enc | quote }}
+#  cast-db-username: {{ .Values.cast_db_username | b64enc | quote }}
+#  cast-db-password: {{ .Values.cast_db_password | b64enc | quote }}
+#  cast-db-database: {{ .Values.cast_db_database  | b64enc | quote }}
+  cast-db-username: {{ .Values.cast_db_username }}
+  cast-db-password: {{ .Values.cast_db_password }}
+  cast-db-database: {{ .Values.cast_db_database }}
