Update secrets.yaml file  for cast-db deployment : add  encoder value for credentials database cast-db

--- a/dm-jenkins-cpa/cast-service/helm/cast-db/templates/secrets.yaml
+++ b/dm-jenkins-cpa/cast-service/helm/cast-db/templates/secrets.yaml
@@ -16,6 +16,9 @@ data:
 #  cast-db-username: "{{ .Values.cast_db_username | b64enc | quote }}"
 #  cast-db-password: "{{ .Values.cast_db_password | b64enc | quote }}"
 #  cast-db-database: "{{ .Values.cast_db_database  | b64enc | quote }}"
-  cast-db-username: "{{ .Values.cast_db_secret.cast_db_username }}"
-  cast-db-password: "{{ .Values.cast_db_secret.cast_db_password }}"
-  cast-db-database: "{{ .Values.cast_db_secret.cast_db_database }}"
+#  cast-db-username: "{{ .Values.cast_db_secret.cast_db_username }}"
+#  cast-db-password: "{{ .Values.cast_db_secret.cast_db_password }}"
+#  cast-db-database: "{{ .Values.cast_db_secret.cast_db_database }}"
+  cast-db-username: "ZmFzdGFwaV91c2Vy"
+  cast-db-password: "ZmFzdGFwaV9wYXNzd2Q="
+  cast-db-database: "ZmFzdGFwaV9kYg=="
