--- a/dm-jenkins-cpa/cast-service/helm/cast-db/secrets-develop.yaml
+++ b/dm-jenkins-cpa/cast-service/helm/cast-db/secrets-develop.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: cast-db-secret
-  namespace: dev
+  namespace: develop
 type: Opaque
 data:
   cast-db-username: ZmFzdGFwaV91c2Vy       # echo fastapi_user  :=> fastapi_user
