--- a/dm-jenkins-cpa/cast-service/helm/cast-db/templates/statfulset.yaml
+++ b/dm-jenkins-cpa/cast-service/helm/cast-db/templates/statfulset.yaml
@@ -3,21 +3,21 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: cast-db-sts
+  name: {{ include "mychart.fullname" . }}-cast-db-sts
 #  namespace: dev
 spec:
-  replicas: 1
+  replicas:  {{ .Values.postgresql.replicas }}
   selector:
     matchLabels:
-      app: cast-db-{{ .Release.Name }}
+      app: {{ include "mychart.name" . }}-cast-db-{{ .Release.Name }}
   template:
     metadata:
       labels:
-        app: cast-db-{{ .Release.Name }}
+        app: {{ include "mychart.name" . }}-{{ .Release.Name }}
     spec:
       containers:
         - name: cast-db
-          image: "{{ .Values.image.cast_db }}"
+          image: {{ .Values.postgresql.image }}
           ports:
             - containerPort: 5432
               name: cast-db
@@ -25,15 +25,21 @@ spec:
             - name: POSTGRES_USER
               valueFrom:
                 secretKeyRef:
-                  name: cast-db-secret
-                  key: cast-db-username
+                  name:  {{ include "mychart.fullname" . }}-postgres-secret
+                  key: postgresql-user
             - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: cast-db-secret
-                  key: cast-db-password
+                  name:  {{ include "mychart.fullname" . }}-postgres-secret
+                  key: postgresql-password
             - name: POSTGRES_DB
               valueFrom:
                 secretKeyRef:
-                  name: cast-db-secret
-                  key: cast-db-database
+                  name:  {{ include "mychart.fullname" . }}-postgres-secret
+                  key: postgresql-database
+          volumeMounts:
+            - name: pgdata
+              mountPath: /var/lib/postgresql/data
+      volumes:
+        - name: pgdata
+          emptyDir: {}
