--- a/dm-jenkins-cpa/cast-service/helm/cast-db/templates/secrets.yaml
+++ b/dm-jenkins-cpa/cast-service/helm/cast-db/templates/secrets.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "mychart.fullname" . }}-postgres-secret
+  name: postgres-secret
   namespace: develop
 type: Opaque
 data:
