--- a/dm-jenkins-cpa/cast-service/helm/cast-db/templates/statfulset.yaml
+++ b/dm-jenkins-cpa/cast-service/helm/cast-db/templates/statfulset.yaml
@@ -9,11 +9,11 @@ spec:
   replicas:  {{ .Values.postgresql.replicas }}
   selector:
     matchLabels:
-      app: {{ include "mychart.name" . }}-cast-db-{{ .Release.Name }}
+      app: cast-db-{{ .Release.Name }}
   template:
     metadata:
       labels:
-        app: {{ include "mychart.name" . }}-{{ .Release.Name }}
+        app: {{ .Release.Name }}
     spec:
       containers:
         - name: cast-db
