update statefulset.yaml : Replace  cast-db-sts BY  cast-db-postgres

--- a/dm-jenkins-cpa/cast-service/helm/cast-db/templates/statfulset.yaml
+++ b/dm-jenkins-cpa/cast-service/helm/cast-db/templates/statfulset.yaml
@@ -3,7 +3,7 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: cast-db-sts
+  name: cast-db-postgres
 #  namespace: dev
 spec:
   replicas:  {{ .Values.postgresql.replicas }}
