change name of variable postgresql with the prefix cast-db- or cast_db_

--- a/dm-jenkins-cpa/cast-service/helm/cast-db/templates/secrets.yaml
+++ b/dm-jenkins-cpa/cast-service/helm/cast-db/templates/secrets.yaml
@@ -3,10 +3,10 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: postgres-secret
+  name: cast-db-postgres-secret
   namespace: develop
 type: Opaque
 data:
-  postgresql-user: {{ .Values.postgresql.user }}
-  postgresql-password: {{ .Values.postgresql.password }}
-  postgresql-database: {{ .Values.postgresql.database }}
+  postgresql-user: {{ .Values.cast_db_postgresql.user }}
+  postgresql-password: {{ .Values.cast_db_postgresql.password }}
+  postgresql-database: {{ .Values.cast_db_postgresql.database }}
