--- a/dm-jenkins-cpa/cast-service/helm/cast-db/templates/statfulset.yaml
+++ b/dm-jenkins-cpa/cast-service/helm/cast-db/templates/statfulset.yaml
@@ -6,7 +6,7 @@ metadata:
   name: cast-db-postgres
 #  namespace: dev
 spec:
-  replicas:  {{ .Values.postgresql.replicas }}
+  replicas:  {{ .Values.cast_db_postgresql.replicas }}
   selector:
     matchLabels:
       app: cast-db-{{ .Release.Name }}
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: cast-db
-          image: {{ .Values.postgresql.image }}
+          image: {{ .Values.cast_db_postgresql.image }}
           ports:
             - containerPort: 5432
               name: cast-db
