--- a/dm-jenkins-cpa/movie-service/helm/movie-db/values-develop.yml
+++ b/dm-jenkins-cpa/movie-service/helm/movie-db/values-develop.yml
@@ -1,4 +1,4 @@
-# /home/cpa/Documents/CPA/44_JENKINS/DM.JENKINS/DM-SP04-C04-JENKINS-CPA-MAY2024/dm-ds-cdo-may24-jenkins/dm-jenkins-cpa/cast-service/helm/cast-db/values-develop.yml
+# /home/cpa/Documents/CPA/44_JENKINS/DM.JENKINS/DM-SP04-C04-JENKINS-CPA-MAY2024/dm-ds-cdo-may24-jenkins/dm-jenkins-cpa/movie-service/helm/movie-db/values-develop.yml
 # Default values for postgres.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
@@ -9,17 +9,12 @@ environment: test
 image:
 #  secretpullimage: gitlab-registry-secret
 #  web: "registry.gitlab.com/datascientest_project/fastapi_traefik/fastapi_web_test:latest"
-  cast_db: "postgres:15-alpine"
-  cast_fastapi: cpa8876/casts-ds-fastapi-develop:latest
+#  cast_db: "postgres:15-alpine"
+#  cast_fastapi: cpa8876/casts-ds-fastapi-develop:latest
 #  traefik: "registry.gitlab.com/datascientest_project/fastapi_traefik/traefik:latest"
 
 
-#data:
-#  cast-db-username: ZmFzdGFwaV91c2Vy       # echo fastapi_user  :=> fastapi_user
-#  cast-db-password: ZmFzdGFwaV9wYXNzd2Q=   # echo fastapi_passwd  :=> fastapi_passwd
-#  cast-db-database: ZmFzdGFwaV9kYg==       # echo fastapi_db  :=> fastapi_db
-
-postgresql:
+movie_db_postgresql:
   user: ZmFzdGFwaV91c2Vy       # echo fastapi_user  :=> fastapi_user
   password: ZmFzdGFwaV9wYXNzd2Q=   # echo fastapi_passwd  :=> fastapi_passwd
   database: ZmFzdGFwaV9kYg==       # echo fastapi_db  :=> fastapi_db
@@ -27,7 +22,7 @@ postgresql:
   replicas: 1
 
 services:
-  cast_db:
+  movie_db:
     port: 5432
 
 
