--- a/dm-jenkins-cpa/movie-service/helm/movie-db/values.yaml
+++ b/dm-jenkins-cpa/movie-service/helm/movie-db/values.yaml
@@ -1,3 +1,4 @@
+# /home/cpa/Documents/CPA/44_JENKINS/DM.JENKINS/DM-SP04-C04-JENKINS-CPA-MAY2024/dm-ds-cdo-may24-jenkins/dm-jenkins-cpa/cast-service/helm/cast-db/values.yaml
 # Default values for postgres.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
@@ -7,7 +8,7 @@ replicaCount: 1
 
 # This sets the container image more information can be found here: https://kubernetes.io/docs/concepts/containers/images/
 image:
-  repository: nginx
+  repository: bitnami/postgresql
   # This sets the pull policy for images.
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
