Add lines on Jenkinsfile to deploy, test and uninstall movie-db (OK) and to deploy cast-fastapi-web (in course

--- a/dm-jenkins-cpa/cast-service/helm/cast-db/templates/statfulset.yaml
+++ b/dm-jenkins-cpa/cast-service/helm/cast-db/templates/statfulset.yaml
@@ -14,6 +14,7 @@ spec:
     metadata:
       labels:
         app: cast-db-{{ .Release.Name }}
+        environment: {{ .Values.environment | quote }}
     spec:
       containers:
         - name: cast-db
