--- a/dm-jenkins-cpa/cast-service/helm/cast-db/values-develop.yml
+++ b/dm-jenkins-cpa/cast-service/helm/cast-db/values-develop.yml
@@ -5,7 +5,7 @@
 
 # This will set the replicaset count more information can be found here: https://kubernetes.io/docs/concepts/workloads/controllers/replicaset/
 replicaCount: 1
-environment: test
+environment: develop
 image:
 #  secretpullimage: gitlab-registry-secret
 #  web: "registry.gitlab.com/datascientest_project/fastapi_traefik/fastapi_web_test:latest"
@@ -13,11 +13,6 @@ image:
 #  cast_fastapi: cpa8876/casts-ds-fastapi-develop:latest
 #  traefik: "registry.gitlab.com/datascientest_project/fastapi_traefik/traefik:latest"
 
-
-#data:
-#  cast-db-username: ZmFzdGFwaV91c2Vy       # echo fastapi_user  :=> fastapi_user
-#  cast-db-password: ZmFzdGFwaV9wYXNzd2Q=   # echo fastapi_passwd  :=> fastapi_passwd
-#  cast-db-database: ZmFzdGFwaV9kYg==       # echo fastapi_db  :=> fastapi_db
 
 cast_db_postgresql:
   user: ZmFzdGFwaV91c2Vy       # echo fastapi_user  :=> fastapi_user
