--- a/dm-jenkins-cpa/cast-service/helm/cast-fastapi/templates/service.yaml
+++ b/dm-jenkins-cpa/cast-service/helm/cast-fastapi/templates/service.yaml
@@ -1,15 +1,16 @@
+# /home/cpa/Documents/CPA/44_JENKINS/DM.JENKINS/DM-SP04-C04-JENKINS-CPA-MAY2024/dm-ds-cdo-may24-jenkins/dm-jenkins-cpa/cast-service/helm/cast-fastapi/templates/service.yaml
+---
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "fastapi.fullname" . }}
-  labels:
-    {{- include "fastapi.labels" . | nindent 4 }}
+  name: cast-fastapi-web-{{ .Release.Name }}
 spec:
-  type: {{ .Values.service.type }}
-  ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
+  type: ClusterIP
   selector:
-    {{- include "fastapi.selectorLabels" . | nindent 4 }}
+    matchLabels:
+      app: cast-fastapi-web-{{ .Release.Name }}
+  ports:
+    - port: 5000
+  selector:
+    app: cast-fastapi-web-{{ .Release.Name }}
+---
